src/styles.css
/* styles.css */

*,
::before,
::after {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

:root {
    --svg-stroke: #374151;
    --sidebar: #f9fafb;
    --bdr-right: #e5e7eb;
    --bg-color: white;

    --todo-bottom: #666;
    --todo-item-bottom: #eee;

    --active-project-bg: #e5e7eb;
    --active-project-color: #0284c7;
    --projects-list-hover: #f3f4f6;

    --priority-low-bg: #e0f7ec;
    --priority-low: #1f9d55;

    --priority-mdm-bg: #e0f2fe;
    --priority-mdm: #0284c7;

    --priority-high-bg: #fdecca;
    ;
    --priority-high: #dc2626;

    --delete-btn: #999;
}


body {
    display: flex;
    min-height: 100vh;
}

.profile-pic {
    height: 3rem;
    width: 3rem;
    border-radius: 50%;
    overflow: hidden;
}

.profile-pic img {
    height: 100%;
    width: 100%;
    object-fit: cover;
}

.icons svg {
    width: 20px;
    height: 20px;
    stroke: var(--svg-stroke);
}

.sidebar {
    width: 20rem;
    background-color: var(--sidebar);
    color: black;
    border-right: 1px solid var(--bdr-right);

    display: flex;
    flex-direction: column;

    gap: 2rem;
    padding: 1.5rem;
}

.profile-bar {
    width: 100%;

    display: flex;
    justify-content: space-between;
    align-items: center;
}

.profile {
    display: flex;
    align-items: center;
    gap: 0.5rem;
}

.utilities {
    height: 20rem;
    gap: 0.5rem;

    display: flex;
    flex-direction: column;
}

.utilities button {
    background: none;
    border: none;
    text-align: left;

    padding: 0.5rem 0.6rem;
    border-radius: 0.4rem;
    font-size: 0.95rem;

    color: #374151;
    transition: background 0.15s ease;
}

.utilities button:hover {
    background-color: #f3f4f6;
    cursor: pointer;
}

.project-item {
    display: flex;
    justify-content: space-between;
    align-items: center;

    padding: 0.5rem 0.6rem;
    border-radius: 0.4rem;
    transition: background 0.15s ease;
}

.project-item:hover {
    background-color: var(--projects-list-hover);
    cursor: pointer;
}

.active-project {
    background-color: var(--active-project-bg);
    color: var(--active-project-color);
    font-weight: bold;
    border-left: 4px solid var(--active-project-color);
    padding-left: 0.4rem;
}

.project-delete-btn {
    background: none;
    border: none;
    color: var(--delete-btn);

    font-size: 0.9rem;

    opacity: 0;
    cursor: pointer;
}

.project-delete-btn:hover {
    color: var(--priority-high);
}

#content {
    flex: 1;
    background-color: var(--bg-color);
    padding: 2rem;
}

.task-tray {
    position: fixed;
    top: 0;
    left: 0;

    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.3);

    display: flex;
    justify-content: center;
    align-items: center;

    padding: 1rem;

    opacity: 0;
    pointer-events: none;

    transition: opacity 0.2s ease;
}

.task-tray.open {
    opacity: 1;
    pointer-events: all;
}

.task-panel {
    width: 25rem;
    background-color: var(--bg-color);
    padding: 1.5rem;
    border-radius: 0.5rem;
}


.todo-item {
    padding: 0.75rem;
    border-radius: 0.5rem;

    border-bottom: 1px solid var(--todo-item-bottom);
    list-style-type: none;
}

.todo-item.completed {
    opacity: 0.6;
    text-decoration: line-through;
}

.todo-top {
    display: flex;
    justify-content: space-between;
    align-items: center;

    margin-bottom: 0.3rem;
}

.todo-left {
    display: flex;
    align-items: center;
    gap: 0.5rem;
}

.todo-bottom {
    margin-left: 1.5rem;
    font-size: 0.85rem;
    color: var(--todo-bottom);
}

.priority {
    font-size: 0.75rem;
    padding: 0.2rem 0.5rem;
    border-radius: 0.25rem;
}

.priority.low {
    background: var(--priority-low-bg);
    color: var(--priority-low);
}

.priority.medium {
    background: var(--priority-mdm-bg);
    color: var(--priority-mdm);
}

.priority.high {
    background: var(--priority-high-bg);
    color: var(--priority-high);
}

.delete-btn {
    display: flex;
    justify-content: center;
    align-items: center;

    background-color: var(--priority-high);
    color: white;
    border: none;
    border-radius: 0.35rem;

    width: 1.2rem;
    height: 1.2rem;

    cursor: pointer;
    font-size: 0.7rem;

    transition: all 0.15s ease;
}

.project-item:hover .project-delete-btn,
.todo-item:hover .delete-btn {
    opacity: 1;
    transform: translateY(-1px);
    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
}

